  * Minor GUI layout changes
  * Added installation finish page
  * Modified code to support Python 2.3 (for licensing and size reasons)
  * Added bittornado source importer
  * Added ipython setup
  * Bumped version to 9.04
  * Added required binaries (will be compiled at a later stage)
  * Added uninstallation page
  * Added pylauncher
  * Added BitTorrent source
  * Added documentation and licenses
  * Connected download managers
  * Fixed download status updates
  * Added more information to the README
  * Made the tasklist thread daemonic so that it does not prevent the
    main application from quitting
  * Reformatted the README file
  * Modified urlgrabber to make the download terminate if so
    instructed by the controlling thread via the update callback
  * Improved the tasklist module to allow for nested backend jobs
  * Refined tasklist
  * Added a stubs for username and timezone
  * Fixed installation finsih page, since reboot was executed before
    showing the page
  * Added cd menu page, to be completed
  * Modified log formatting
  * Completed cd menu page
  * Added mythbuntu to isolist.ini
  * Slight simplification of the frontend
  * Fixed ISO backup during uninstallation
  * Added finish pages
  * Added preliminary code to generate virtual disk files, to be completed
  * Added timezone detection
  * Allocate disk space for virtual disks, to be tested
  * Added wubizip compilation mode, to create a debugger friendly
    environment
  * More robust copytree
  * Use regex to parse .disk/info
  * Fixed task progress callback
  * Have a different uninstallation message when the installer is run
    and a previous installation is detected
  * Path joining whith a drive as first item whitout trailing slash was
    returning the user home directory
  * Improved download manager
  * Added mirror selection
  * Fixed MD5 calculation which was limited to files less than 100MB

 -- Agostino Russo <agostino.russo@gmail.com>  Sat, 10 Jan 2009 00:59:00 +0000