@@ -141,7 +141,8 @@ class Wubi(object):
         log.info("Received settings")
         self.frontend.run_tasks(self.backend.get_uninstallation_tasklist())
         log.info("Almost finished uninstalling")
-        self.frontend.show_uninstallation_finish_page()
+        if not self.info.uninstall_before_install:
+            self.frontend.show_uninstallation_finish_page()
         log.info("Finished uninstallation")
 
     def run_cd_menu(self):
