@@ -75,5 +75,7 @@ wubi (9.04) UNRELEASED; urgency=low
   * Improved download manager
   * Added mirror selection
   * Fixed MD5 calculation which was limited to files less than 100MB
+  * Refactoring of ISO retrieval code
+  * Fixed bootloader modification code
 
- -- Agostino Russo <agostino.russo@gmail.com>  Sat, 10 Jan 2009 00:59:00 +0000
+ -- Agostino Russo <agostino.russo@gmail.com>  Sat, 10 Jan 2009 20:02:35 +0000
